Fixed routing Fixed tasks overflow

--- a/src/components/MainRoute.scss
+++ b/src/components/MainRoute.scss
@@ -10,6 +10,7 @@
     flex: 1;
     position: relative;
     display: flex;
+    overflow: hidden;
 }
 
 .bottom-navigator-wrapper {
