--- a/src/components/TasksScreen.scss
+++ b/src/components/TasksScreen.scss
@@ -29,6 +29,7 @@
     text-align: left;
     color: $background-text;
     font-size: 14px;
+    text-decoration: none;
 
     & .flex-column {
         margin-left: 10px;
