--- a/src/scss/common.scss
+++ b/src/scss/common.scss
@@ -126,3 +126,7 @@ span.background {
     padding: 10px;
     font-size: 13px;
 }
+
+.overflow-auto{
+    overflow: auto;
+}
